ver productos - listo (falta poner imágenes)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
         <item>Dulces</item>
         <item>Comida</item>
     </string-array>
+
+    <string name="foto_de_producto">FOTO DE PRODUCTO</string>
 </resources>
