--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     </string-array>
 
     <string name="foto_de_producto">FOTO DE PRODUCTO</string>
+    <string name="foto_de_vendedor">FOTO DE VENDEDOR</string>
 </resources>
