--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,8 @@
     <string name="nombre_completo">Nombre Completo</string>
     <string name="bonton_registrar">Registrarse</string>
     <string name="entrar">Entrar</string>
+    <string name="cargando_datos">Cargando datos</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="editar_foto">Editar Foto</string>
+    <string name="eliminar_perfil">Eliminar perfil</string>
 </resources>
