--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,10 +19,10 @@
     <string name="prompt_password">Contraseña</string>
     <string name="action_sign_in_short">signin</string>
     <string name="prompt_email">Correo electrónico</string>
-    <string name="welcome">wel</string>
+    <string name="welcome">Bienvenido</string>
     <string name="login_failed">fail</string>
-    <string name="invalid_username">inva</string>
-    <string name="invalid_password">passinva</string>
+    <string name="invalid_username">Nombre de usuario inválido</string>
+    <string name="invalid_password">Más de 5 carácteres</string>
     <string name="text_contrasena">Contraseña</string>
     <string name="crear_cuenta">Crear una cuenta</string>
     <string name="text_login">Inicia sesión</string>
@@ -31,9 +31,15 @@
     <string name="nombre_completo">Nombre Completo</string>
     <string name="bonton_registrar">Registrarse</string>
     <string name="entrar">Iniciar Sesión</string>
-    <string name="cargando_datos">Cargando datos</string>
+    <string name="cargando_datos">Cargando datos...</string>
     <string name="contrase_a">Contraseña</string>
     <string name="editar_foto">Editar Foto</string>
     <string name="eliminar_perfil">Eliminar perfil</string>
     <string name="contrase_a1">Contraseña : *****</string>
+    <string name="elegir_de_galer_a">Elegir de galería</string>
+    <string name="eliminar_foto">Eliminar foto</string>
+    <string name="fotoperfil">fotoperfil</string>
+    <string name="editar_informaci_n">Editar información</string>
+    <string name="regresar">Regresar</string>
+    <string name="todo">TODO</string>
 </resources>
